# simple-agno-chat-history

.cursor/skills/agno-development/: SKILL.md
.cursor/skills/agno-development/references/: AGENTOS.md  PATTERNS.md  TOOLS-AND-KNOWLEDGE.md
.cursor/skills/code-explainer/: SKILL.md
.cursor/skills/code-explainer/references/: DIAGRAM-PATTERNS.md
.cursor/skills/code-refactoring-review/: SKILL.md
.cursor/skills/code-refactoring-review/references/: REFACTORING-CATALOG.md
agentos/: Makefile  README.md  agno.db  pyproject.toml
agentos/docs/: agent-tdd-guide.md
agentos/src/: api.py  config.py  human_tools.py  instrumentation.py  main.py  models.py  provisioners.py  state.py  team.py  workflow.py
agentos/tests/: conftest.py  test_control_flow.py  test_onboarding_team.py  test_state_model.py
agentos/tmp/: agentos_state.db
